Remove alert from test game

--- a/gameShop/play_game/static/play_game/test_game3.html
+++ b/gameShop/play_game/static/play_game/test_game3.html
@@ -139,7 +139,7 @@ document.addEventListener('keydown', function(e) {
   // not already moving on the same axis (pressing left while moving
   // left won't do anything, and pressing right while moving left
   // shouldn't let you collide with your own body)
-  alert(e.keyCode);
+  //alert(e.keyCode);
   if (e.keyCode === 81){
     var msg = {
         "messageType": "SCORE",
